Updated config.properties page

--- a/framework/test-output/emailable-report.html
+++ b/framework/test-output/emailable-report.html
@@ -1,42 +1,2 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><head><title>TestNG Report</title><style type="text/css">table {margin-bottom:10px;border-collapse:collapse;empty-cells:show}th,td {border:1px solid #009;padding:.25em .5em}th {vertical-align:bottom}td {vertical-align:top}table a {font-weight:bold}.stripe td {background-color: #E6EBF9}.num {text-align:right}.passedodd td {background-color: #3F3}.passedeven td {background-color: #0A0}.skippedodd td {background-color: #DDD}.skippedeven td {background-color: #CCC}.failedodd td,.attn {background-color: #F33}.failedeven td,.stripe .attn {background-color: #D00}.stacktrace {white-space:pre;font-family:monospace}.totop {font-size:85%;text-align:center;border-bottom:2px solid #000}</style></head><body><table><tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr><tr><th colspan="7">Suite</th></tr><tr><td><a href="#t0">Test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">4</td><td class="num">17,745</td><td></td><td></td></tr></table><table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="4">com.test.HomePageTest</td><td><a href="#m0">validateHomePageFields</a></td><td rowspan="1">1679500834130</td><td rowspan="1">86</td></tr><tr class="failedeven"><td><a href="#m1">validateHomePageLeftPanelFields</a></td><td rowspan="1">1679500834350</td><td rowspan="1">42</td></tr><tr class="failedeven"><td><a href="#m2">validateHomePageTopPanelFields</a></td><td rowspan="1">1679500834262</td><td rowspan="1">61</td></tr><tr class="failedeven"><td><a href="#m3">validateQuickEmailAndQuickSmsOption</a></td><td rowspan="1">1679500834415</td><td rowspan="1">63</td></tr></tbody></table><h2>Test</h2><h3 id="m0">com.test.HomePageTest#validateHomePageFields</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
-	Failure message:Reparation field not displayed expected [true] but found [false],
-	Failure message:Client field not displayed expected [true] but found [false],
-	Failure message:Products field not displayed expected [true] but found [false],
-	Failure message:Calendar not displayed expected [true] but found [false],
-	Failure message:Revenue chart field not displayed expected [true] but found [false],
-	Failure message:Stock chart field not displayed expected [true] but found [false],
-	Failure message:Quick Email field not displayed expected [true] but found [false],
-	Failure message:Quick SMS field not displayed expected [true] but found [false]
-	at com.test.HomePageTest.validateHomePageFields(HomePageTest.java:49)
-... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p><h3 id="m1">com.test.HomePageTest#validateHomePageLeftPanelFields</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
-	Failure message:Logged in username not displayed in left panel expected [true] but found [false],
-	Failure message:Search reparations textbox not displayed expected [true] but found [false],
-	Failure message:Main Navigation text missing in left panel expected [true] but found [false],
-	Failure message:Home button not displayed in left panel expected [true] but found [false],
-	Failure message: Settings button not displayed in left panel expected [true] but found [false],
-	Failure message:Settings options missing in left panel expected [true] but found [false]
-	at com.test.HomePageTest.validateHomePageLeftPanelFields(HomePageTest.java:93)
-... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p><h3 id="m2">com.test.HomePageTest#validateHomePageTopPanelFields</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
-	Failure message:Service Management Text not displayed expected [true] but found [false],
-	Failure message:Side-Bar toggle button not displayed expected [true] but found [false],
-	Failure message:Alert Button not displayed expected [true] but found [false],
-	Failure message:Add Button not displayed expected [true] but found [false],
-	Failure message:Logged-in username not displayed expected [true] but found [false],
-	Failure message:Number of alerts not displayed expected [true] but found [false],
-	Failure message:Add Button not clicked expected [true] but found [false],
-	Failure message:Add Client Button not displayed expected [true] but found [false],
-	Failure message:Add Reparation Button not displayed expected [true] but found [false],
-	Failure message:Send SMS Button not displayed expected [true] but found [false],
-	Failure message:Send Email Button not displayed expected [true] but found [false]
-	at com.test.HomePageTest.validateHomePageTopPanelFields(HomePageTest.java:74)
-... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p><h3 id="m3">com.test.HomePageTest#validateQuickEmailAndQuickSmsOption</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
-	Failure message:Please enter emailid expected [true] but found [false],
-	Failure message:Please enter mail subject expected [true] but found [false],
-	Failure message:Please enter mail body expected [true] but found [false],
-	Failure message:Email not send expected [true] but found [false],
-	Failure message:Please enter mobile number expected [true] but found [false],
-	Failure message:Please enter SMS message expected [true] but found [false],
-	Failure message:SMS not send expected [true] but found [false]
-	at com.test.HomePageTest.validateQuickEmailAndQuickSmsOption(HomePageTest.java:119)
-... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p></body></html>
+<html xmlns="http://www.w3.org/1999/xhtml"><head><title>TestNG Report</title><style type="text/css">table {margin-bottom:10px;border-collapse:collapse;empty-cells:show}th,td {border:1px solid #009;padding:.25em .5em}th {vertical-align:bottom}td {vertical-align:top}table a {font-weight:bold}.stripe td {background-color: #E6EBF9}.num {text-align:right}.passedodd td {background-color: #3F3}.passedeven td {background-color: #0A0}.skippedodd td {background-color: #DDD}.skippedeven td {background-color: #CCC}.failedodd td,.attn {background-color: #F33}.failedeven td,.stripe .attn {background-color: #D00}.stacktrace {white-space:pre;font-family:monospace}.totop {font-size:85%;text-align:center;border-bottom:2px solid #000}</style></head><body><table><tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr><tr><th colspan="7">Suite</th></tr><tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">20,257</td><td></td><td></td></tr></table><table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.test.QuantityAlertsPageTest</td><td><a href="#m0">validateQuantityAlertPageFields</a></td><td rowspan="1">1679930888586</td><td rowspan="1">203</td></tr></tbody></table><h2>Test</h2><h3 id="m0">com.test.QuantityAlertsPageTest#validateQuantityAlertPageFields</h3><table class="result"></table><p class="totop"><a href="#summary">back to summary</a></p></body></html>
