--- a/framework/test-output/index.html
+++ b/framework/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite, 4 failed tests</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Suite">
-              <span class="suite-name border-failed">Suite</span>
+              <span class="suite-name border-passed">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>C:\Java new workspace\framework\testng.xml</span>
+                    <span>C:\Users\angit\git\framework\framework\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,36 +91,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods, 4 failed,   </span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Suite" class="hide-methods failed suite-Suite"> (hide)</a> <!-- hide-methods failed suite-Suite -->
-                      <a href="#" panel-name="suite-Suite" class="show-methods failed suite-Suite"> (show)</a> <!-- show-methods failed suite-Suite -->
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-Suite" class="hide-methods passed suite-Suite"> (hide)</a> <!-- hide-methods passed suite-Suite -->
+                      <a href="#" panel-name="suite-Suite" class="show-methods passed suite-Suite"> (show)</a> <!-- show-methods passed suite-Suite -->
                     </span>
-                    <div class="method-list-content failed suite-Suite">
+                    <div class="method-list-content passed suite-Suite">
                       <span>
-                        <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.test.HomePageTest" hash-for-method="validateHomePageFields">validateHomePageFields</a> <!-- method navigator-link -->
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.test.QuantityAlertsPageTest" hash-for-method="validateQuantityAlertPageFields">validateQuantityAlertPageFields</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                      <span>
-                        <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.test.HomePageTest" hash-for-method="validateHomePageLeftPanelFields">validateHomePageLeftPanelFields</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.test.HomePageTest" hash-for-method="validateHomePageTopPanelFields">validateHomePageTopPanelFields</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.test.HomePageTest" hash-for-method="validateQuickEmailAndQuickSmsOption">validateQuickEmailAndQuickSmsOption</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-Suite -->
+                    </div> <!-- method-list-content passed suite-Suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -132,94 +117,25 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
-          <div class="suite-Suite-class-failed">
+          <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">com.test.HomePageTest</span>
+              <img src="passed.png"/>
+              <span class="class-name">com.test.QuantityAlertsPageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="validateHomePageFields">
-                  </a> <!-- validateHomePageFields -->
-                  <span class="method-name">validateHomePageFields</span>
-                  <div class="stack-trace">java.lang.AssertionError: The following asserts failed:
-	Failure message:Reparation field not displayed expected [true] but found [false],
-	Failure message:Client field not displayed expected [true] but found [false],
-	Failure message:Products field not displayed expected [true] but found [false],
-	Failure message:Calendar not displayed expected [true] but found [false],
-	Failure message:Revenue chart field not displayed expected [true] but found [false],
-	Failure message:Stock chart field not displayed expected [true] but found [false],
-	Failure message:Quick Email field not displayed expected [true] but found [false],
-	Failure message:Quick SMS field not displayed expected [true] but found [false]
-	at com.test.HomePageTest.validateHomePageFields(HomePageTest.java:49)
-... Removed 26 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="validateHomePageLeftPanelFields">
-                  </a> <!-- validateHomePageLeftPanelFields -->
-                  <span class="method-name">validateHomePageLeftPanelFields</span>
-                  <div class="stack-trace">java.lang.AssertionError: The following asserts failed:
-	Failure message:Logged in username not displayed in left panel expected [true] but found [false],
-	Failure message:Search reparations textbox not displayed expected [true] but found [false],
-	Failure message:Main Navigation text missing in left panel expected [true] but found [false],
-	Failure message:Home button not displayed in left panel expected [true] but found [false],
-	Failure message: Settings button not displayed in left panel expected [true] but found [false],
-	Failure message:Settings options missing in left panel expected [true] but found [false]
-	at com.test.HomePageTest.validateHomePageLeftPanelFields(HomePageTest.java:93)
-... Removed 26 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="validateHomePageTopPanelFields">
-                  </a> <!-- validateHomePageTopPanelFields -->
-                  <span class="method-name">validateHomePageTopPanelFields</span>
-                  <div class="stack-trace">java.lang.AssertionError: The following asserts failed:
-	Failure message:Service Management Text not displayed expected [true] but found [false],
-	Failure message:Side-Bar toggle button not displayed expected [true] but found [false],
-	Failure message:Alert Button not displayed expected [true] but found [false],
-	Failure message:Add Button not displayed expected [true] but found [false],
-	Failure message:Logged-in username not displayed expected [true] but found [false],
-	Failure message:Number of alerts not displayed expected [true] but found [false],
-	Failure message:Add Button not clicked expected [true] but found [false],
-	Failure message:Add Client Button not displayed expected [true] but found [false],
-	Failure message:Add Reparation Button not displayed expected [true] but found [false],
-	Failure message:Send SMS Button not displayed expected [true] but found [false],
-	Failure message:Send Email Button not displayed expected [true] but found [false]
-	at com.test.HomePageTest.validateHomePageTopPanelFields(HomePageTest.java:74)
-... Removed 26 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="validateQuickEmailAndQuickSmsOption">
-                  </a> <!-- validateQuickEmailAndQuickSmsOption -->
-                  <span class="method-name">validateQuickEmailAndQuickSmsOption</span>
-                  <div class="stack-trace">java.lang.AssertionError: The following asserts failed:
-	Failure message:Please enter emailid expected [true] but found [false],
-	Failure message:Please enter mail subject expected [true] but found [false],
-	Failure message:Please enter mail body expected [true] but found [false],
-	Failure message:Email not send expected [true] but found [false],
-	Failure message:Please enter mobile number expected [true] but found [false],
-	Failure message:Please enter SMS message expected [true] but found [false],
-	Failure message:SMS not send expected [true] but found [false]
-	at com.test.HomePageTest.validateQuickEmailAndQuickSmsOption(HomePageTest.java:119)
-... Removed 26 stack frames
-</div> <!-- stack-trace -->
+                  <a name="validateQuantityAlertPageFields">
+                  </a> <!-- validateQuantityAlertPageFields -->
+                  <span class="method-name">validateQuantityAlertPageFields</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-failed -->
+          </div> <!-- suite-Suite-class-passed -->
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Java new workspace\framework\testng.xml</span>
+            <span class="header-content">C:\Users\angit\git\framework\framework\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -229,7 +145,7 @@
   &lt;test name=&quot;Test&quot;&gt;
     &lt;parameter name=&quot;browserName&quot; value=&quot;edge&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.test.HomePageTest&quot;/&gt;
+      &lt;class name=&quot;com.test.QuantityAlertsPageTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -269,28 +185,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'validateHomePageFields')
-data.setCell(0, 2, 'com.test.HomePageTest')
-data.setCell(0, 3, 86);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'validateQuickEmailAndQuickSmsOption')
-data.setCell(1, 2, 'com.test.HomePageTest')
-data.setCell(1, 3, 63);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'validateHomePageTopPanelFields')
-data.setCell(2, 2, 'com.test.HomePageTest')
-data.setCell(2, 3, 61);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'validateHomePageLeftPanelFields')
-data.setCell(3, 2, 'com.test.HomePageTest')
-data.setCell(3, 3, 42);
+data.setCell(0, 1, 'validateQuantityAlertPageFields')
+data.setCell(0, 2, 'com.test.QuantityAlertsPageTest')
+data.setCell(0, 3, 203);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 252 ms</span>
+              <span class="suite-total-time">Total running time: 203 ms</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -316,50 +220,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.test.HomePageTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.test.QuantityAlertsPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">launchBrowser(edge)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-method before">
                 <span class="method-name">preRun</span>
-                <span class="method-start">4841 ms</span>
+                <span class="method-start">4812 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">validateHomePageFields</span>
-                <span class="method-start">17391 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method before">
-                <span class="method-name">preRun</span>
-                <span class="method-start">17488 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">validateHomePageTopPanelFields</span>
-                <span class="method-start">17523 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method before">
-                <span class="method-name">preRun</span>
-                <span class="method-start">17588 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">validateHomePageLeftPanelFields</span>
-                <span class="method-start">17611 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method before">
-                <span class="method-name">preRun</span>
-                <span class="method-start">17657 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">validateQuickEmailAndQuickSmsOption</span>
-                <span class="method-start">17676 ms</span>
+                <span class="method-name">validateQuantityAlertPageFields</span>
+                <span class="method-start">20051 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
