--- a/framework/test-output/old/Suite/classes.html
+++ b/framework/test-output/old/Suite/classes.html
@@ -4,14 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.test.QuantityAlertsPageTest</td>
+<td>com.test.OrderAndReparationsPageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateQuantityAlertPageFields</td>
+<td>validateOrderAndReparationsPageFields</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>validateUpdateStatusFunctionalityInReparationsTable</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
