--- a/framework/test-output/old/Suite/methods.html
+++ b/framework/test-output/old/Suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c4639c">  <td>23/03/27 20:57:48</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;AutomationBase.launchBrowser(java.lang.String)[pri:0, instance:com.test.QuantityAlertsPageTest@13805618]">&gt;&gt;launchBrowser</td> 
+<tr bgcolor="c4639c">  <td>23/03/28 21:16:05</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;AutomationBase.launchBrowser(java.lang.String)[pri:0, instance:com.test.OrderAndReparationsPageTest@13805618]">&gt;&gt;launchBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@909295153</td>   <td></td> </tr>
-<tr bgcolor="98978d">  <td>23/03/27 20:57:53</td>   <td>4809</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;QuantityAlertsPageTest.preRun()[pri:0, instance:com.test.QuantityAlertsPageTest@13805618]">&gt;&gt;preRun</td> 
+<tr bgcolor="98978d">  <td>23/03/28 21:16:10</td>   <td>5075</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;OrderAndReparationsPageTest.preRun()[pri:0, instance:com.test.OrderAndReparationsPageTest@13805618]">&gt;&gt;preRun</td> 
 <td>&nbsp;</td>  <td>main@909295153</td>   <td></td> </tr>
-<tr bgcolor="98978d">  <td>23/03/27 20:58:08</td>   <td>20047</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="QuantityAlertsPageTest.validateQuantityAlertPageFields()[pri:1, instance:com.test.QuantityAlertsPageTest@13805618]">validateQuantityAlertPageFields</td> 
+<tr bgcolor="98978d">  <td>23/03/28 21:16:23</td>   <td>17984</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrderAndReparationsPageTest.validateUpdateStatusFunctionalityInReparationsTable()[pri:2, instance:com.test.OrderAndReparationsPageTest@13805618]">validateUpdateStatusFunctionalityInReparationsTable</td> 
   <td>main@909295153</td>   <td></td> </tr>
 </table>
