--- a/framework/test-output/old/Suite/classes.html
+++ b/framework/test-output/old/Suite/classes.html
@@ -11,6 +11,18 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>validateFilterResultFunctionalityInReparationTable</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>validateColumnVisibilityFunctionalityInReparationTable</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>validateAddNewReparationFunctionalityInReparationTable</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>validateOrderAndReparationsPageFields</td>
 <td>&nbsp;</td></tr>
 <tr>
