commit on april 12

--- a/framework/test-output/index.html
+++ b/framework/test-output/index.html
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.test.OrderAndReparationsPageTest" hash-for-method="validateColumnVisibilityFunctionalityInReparationTable">validateColumnVisibilityFunctionalityInReparationTable</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.test.InventoryPageTest" hash-for-method="validateEditProductFunctionalityInInventoryPage">validateEditProductFunctionalityInInventoryPage</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.test.OrderAndReparationsPageTest</span>
+              <span class="class-name">com.test.InventoryPageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="validateColumnVisibilityFunctionalityInReparationTable">
-                  </a> <!-- validateColumnVisibilityFunctionalityInReparationTable -->
-                  <span class="method-name">validateColumnVisibilityFunctionalityInReparationTable</span>
+                  <a name="validateEditProductFunctionalityInInventoryPage">
+                  </a> <!-- validateEditProductFunctionalityInInventoryPage -->
+                  <span class="method-name">validateEditProductFunctionalityInInventoryPage</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -143,9 +143,9 @@
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Suite&quot;&gt;
   &lt;test name=&quot;Test&quot;&gt;
-    &lt;parameter name=&quot;browserName&quot; value=&quot;edge&quot;/&gt;
+    &lt;parameter name=&quot;browserName&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.test.OrderAndReparationsPageTest&quot;/&gt;
+      &lt;class name=&quot;com.test.InventoryPageTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -187,14 +187,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'validateColumnVisibilityFunctionalityInReparationTable')
-data.setCell(0, 2, 'com.test.OrderAndReparationsPageTest')
-data.setCell(0, 3, 1411);
+data.setCell(0, 1, 'validateEditProductFunctionalityInInventoryPage')
+data.setCell(0, 2, 'com.test.InventoryPageTest')
+data.setCell(0, 3, 8426);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
+              <span class="suite-total-time">Total running time: 8 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -209,19 +209,17 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">4 ignored methods</span>
+            <span class="header-content">3 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">com.test.OrderAndReparationsPageTest</span>
+              <span class="ignored-class-name">com.test.InventoryPageTest</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">validateUpdateStatusFunctionalityInReparationsTable</span>
+                <span class="ignored-method-name">validateActionsIconInInventoryPage</span>
                 <br/>
-                <span class="ignored-method-name">validateOrderAndReparationsPageFields</span>
+                <span class="ignored-method-name">validateInventoryPage</span>
                 <br/>
-                <span class="ignored-method-name">validateFilterResultFunctionalityInReparationTable</span>
-                <br/>
-                <span class="ignored-method-name">validateAddNewReparationFunctionalityInReparationTable</span>
+                <span class="ignored-method-name">validateAddProductFunctionalityInActionsIconInInventoryPage</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -233,18 +231,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.test.OrderAndReparationsPageTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.test.InventoryPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
-                <span class="method-name">launchBrowser(edge)</span>
+                <span class="method-name">launchBrowser(chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-method before">
                 <span class="method-name">preRun</span>
-                <span class="method-start">4553 ms</span>
+                <span class="method-start">3487 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">validateColumnVisibilityFunctionalityInReparationTable</span>
-                <span class="method-start">32387 ms</span>
+                <span class="method-name">validateEditProductFunctionalityInInventoryPage</span>
+                <span class="method-start">10787 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
