--- a/framework/test-output/old/Suite/methods-not-run.html
+++ b/framework/test-output/old/Suite/methods-not-run.html
@@ -1,6 +1,5 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>com.test.OrderAndReparationsPageTest.validateUpdateStatusFunctionalityInReparationsTable</td></tr>
-<tr><td>com.test.OrderAndReparationsPageTest.validateOrderAndReparationsPageFields</td></tr>
-<tr><td>com.test.OrderAndReparationsPageTest.validateFilterResultFunctionalityInReparationTable</td></tr>
-<tr><td>com.test.OrderAndReparationsPageTest.validateAddNewReparationFunctionalityInReparationTable</td></tr>
+<tr><td>com.test.InventoryPageTest.validateActionsIconInInventoryPage</td></tr>
+<tr><td>com.test.InventoryPageTest.validateInventoryPage</td></tr>
+<tr><td>com.test.InventoryPageTest.validateAddProductFunctionalityInActionsIconInInventoryPage</td></tr>
 </table>
