--- a/framework/test-output/old/Suite/classes.html
+++ b/framework/test-output/old/Suite/classes.html
@@ -4,30 +4,26 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.test.OrderAndReparationsPageTest</td>
+<td>com.test.InventoryPageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateFilterResultFunctionalityInReparationTable</td>
+<td>validateInventoryPage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateColumnVisibilityFunctionalityInReparationTable</td>
+<td>validateAddProductFunctionalityInActionsIconInInventoryPage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateAddNewReparationFunctionalityInReparationTable</td>
+<td>validateEditProductFunctionalityInInventoryPage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>validateOrderAndReparationsPageFields</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>validateUpdateStatusFunctionalityInReparationsTable</td>
+<td>validateActionsIconInInventoryPage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
