--- a/framework/test-output/old/Suite/methods.html
+++ b/framework/test-output/old/Suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c4639c">  <td>23/04/03 20:33:49</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;AutomationBase.launchBrowser(java.lang.String)[pri:0, instance:com.test.OrderAndReparationsPageTest@13805618]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@909295153</td>   <td></td> </tr>
-<tr bgcolor="98978d">  <td>23/04/03 20:33:54</td>   <td>4546</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;OrderAndReparationsPageTest.preRun()[pri:0, instance:com.test.OrderAndReparationsPageTest@13805618]">&gt;&gt;preRun</td> 
-<td>&nbsp;</td>  <td>main@909295153</td>   <td></td> </tr>
-<tr bgcolor="98978d">  <td>23/04/03 20:34:22</td>   <td>32380</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrderAndReparationsPageTest.validateColumnVisibilityFunctionalityInReparationTable()[pri:4, instance:com.test.OrderAndReparationsPageTest@13805618]">validateColumnVisibilityFunctionalityInReparationTable</td> 
-  <td>main@909295153</td>   <td></td> </tr>
+<tr bgcolor="a1eaa2">  <td>23/04/12 17:23:29</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;AutomationBase.launchBrowser(java.lang.String)[pri:0, instance:com.test.InventoryPageTest@192b07fd]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1735934726</td>   <td></td> </tr>
+<tr bgcolor="92ec79">  <td>23/04/12 17:23:32</td>   <td>3483</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InventoryPageTest.preRun()[pri:0, instance:com.test.InventoryPageTest@192b07fd]">&gt;&gt;preRun</td> 
+<td>&nbsp;</td>  <td>main@1735934726</td>   <td></td> </tr>
+<tr bgcolor="92ec79">  <td>23/04/12 17:23:40</td>   <td>10783</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InventoryPageTest.validateEditProductFunctionalityInInventoryPage()[pri:4, instance:com.test.InventoryPageTest@192b07fd]">validateEditProductFunctionalityInInventoryPage</td> 
+  <td>main@1735934726</td>   <td></td> </tr>
 </table>
